<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_BowlFeeder" Id="{76fe89ae-df30-484b-ae45-cc759ef538e0}">
    <Declaration><![CDATA[TYPE ST_BowlFeeder :
	STRUCT
		bOut_Vibrate			AT%Q*	: BOOL;
		bOut_BlowAlign			AT%Q*	: BOOL;
		bIn_NoMaterial			AT%I*	: BOOL;
		bIn_LowLevelMaterial	AT%I*	: BOOL;
		bIn_UnitInPosition		AT%I*	: BOOL;
	END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>